<resources>
    <string name="app_name">Android Learn</string>
    <string name="list_add_btn">add</string>
    <string name="list_clear_btn">clear</string>
    <string name="list_delete_btn">delete</string>

    <string name="second_fragment">Second fragment</string>
    <string name="first_fragment">First fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_drawable_xml">ColorDrawable</string>
    <string name="color_drawable_code">ColorDrawableCode</string>
    <string name="shape_drawable">ShapeDarwable</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="record_video">录制视频</string>
    <string name="stop_record">停止录制</string>
    <string name="select_resource">选取本地</string>
    <string name="picture">照片</string>
    <string name="take_picture">拍照</string>
    <string name="take_video">录视频</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

</resources>
