<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.UILearn.DrawableMainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/color_drawable_text_xml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/custom_black"
                    android:text="@string/color_drawable_xml"
                    android:textColor="@color/custom_white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/color_drawable_text_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/color_drawable_code"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:background="@drawable/shape_drawable_text"
                    android:text="@string/shape_drawable"
                    android:layout_margin="10dp" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="阴影加边框"
                android:textSize="20sp"
                android:background="@color/custom_white"
                android:src="@drawable/blue_border"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/shadow_shape">

            </View>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="disabled"
                    android:background="@drawable/bitmap_drawable_disabled"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="clamp"
                    android:background="@drawable/bitmap_drawable_clamp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="repeat"
                    android:background="@drawable/bitmap_drawable_repeat"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="mirror"
                    android:background="@drawable/bitmap_drawable_mirror"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/clip_drawable_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:src="@drawable/clip_drawoble" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/rotate_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rotate_drawable" />
        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
